# c-compiler-llvm

./: CMakeLists.txt  README.md
docs/: analysis_design.md  ir_walkthrough.md  language_spec.md
examples/warnings/: divide_by_zero.mc  missing_return.mc  uninitialized.mc  unreachable.mc  unused_function.mc  unused_var.mc
include/: analyzer.h  ast.h  cfg.h  codegen.h  parser.h  sema.h  token.h
src/: analyzer.cpp  ast.cpp  cfg.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp  sema.cpp
tests/: analyzer_test.cpp  codegen_test.cpp  lexer_test.cpp  parser_test.cpp  sema_test.cpp  smoke_test.cpp
